--- a/package.json
+++ b/package.json
@@ -44,8 +44,5 @@
     "giphy-api": "^2.0.1",
     "pokersolver": "^2.1.3"
   },
-  "devDependencies": {},
-  "engines": {
-    "node": "16.x"
-  }
+  "devDependencies": {}
 }
