--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "pokersolver": "^2.1.3",
     "superagent": "^6.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "16.x"
+  }
 }
