--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "engines": {
+    "node": "12.16.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -39,11 +42,7 @@
     "fs-nextra": "^0.5.1",
     "aki-api": "^5.0.0",
     "giphy-api": "^2.0.1",
-    "pokersolver": "^2.1.3",
-    "superagent": "^6.1.0"
+    "pokersolver": "^2.1.3"
   },
-  "devDependencies": {},
-  "engines": {
-    "node": "16.x"
-  }
+  "devDependencies": {}
 }
